--- a/src/main/resources/templates/home.html
+++ b/src/main/resources/templates/home.html
@@ -3,6 +3,12 @@
   <head>
     <meta charset="UTF-8" />
     <title>Blogging platform</title>
+    <link
+      rel="stylesheet"
+      href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css"
+      integrity="sha384-JcKb8q3iqJ61gNV9KGb8thSsNjpSL0n8PARn9HuZOnIxN0hoP+VmmDGMN5t9UJ0Z"
+      crossorigin="anonymous"
+    />
     <link rel="stylesheet" th:href="@{/css/home.css}" />
   </head>
   <body class="body">
@@ -21,7 +27,7 @@
     <main>
       <section>
         <h2 style="padding-bottom: 15px">Blogging Platform</h2>
-        <h1 class="text-muted">
+        <h1>
           Be billing to share your knowledge..<br />The more you share the more
           it increase.<br />
           <h3>Keep Sharing!</h3>
@@ -35,7 +41,7 @@
       </section>
     </main>
 
-    <div
+    <!--  <div
       class="box-black"
       style="
         text-align: center;
@@ -44,7 +50,20 @@
         letter-spacing: 3.9px;
       "
     >
-      HOME | TERMS | PRIVACY | ABOUT US | CONTACT
-    </div>
+       <button
+        style="
+          background-color: transparent;
+          color: whitesmoke;
+          outline: none;
+          border: none;
+        "
+        type="button"
+        class="btn btn-dark"
+        data-toggle="modal"
+        data-target="#modelId"
+      >
+        TERMS & Conditions | PRIVACY | ABOUT US | CONTACT US
+      </button> 
+    </div>-->
   </body>
 </html>
