Search by topic feature for QnA and Blogs

--- a/src/main/resources/templates/Base.html
+++ b/src/main/resources/templates/Base.html
@@ -41,7 +41,7 @@
             background-color: #343a40;
             color: white;
             margin-left: 138px;
-
+            text-transform: none;
             border-radius: 50px;
             margin-top: 20px;
             font-size: 40px;
