--- a/src/main/resources/templates/home.html
+++ b/src/main/resources/templates/home.html
@@ -33,8 +33,10 @@
           <h3>Keep Sharing!</h3>
         </h1>
 
-        <div style="padding-top: 20px">
-          <a href="/register" class="btn">Create Blog</a>
+        <div style="padding-top: 20px; padding-right: 16px">
+          <a style="margin-right: 23px" href="/register" class="btn"
+            >Create Blog</a
+          >
 
           <a href="/qna" class="btn">QnA</a>
         </div>
