--- a/src/main/resources/templates/admin/answers.html
+++ b/src/main/resources/templates/admin/answers.html
@@ -10,7 +10,7 @@
         <thead class="thead-dark">
           <tr>
             <th scope="col">id</th>
-            <th scope="col">QuestionID</th>
+            <!-- <th scope="col">QuestionID</th> -->
             <th scope="col">upvotes</th>
             <th scope="col">date</th>
             <th scope="col">author</th>
@@ -19,7 +19,7 @@
         <tbody th:each="answer : ${answers}">
           <tr>
             <td scope="row" th:text="${answer.answerId}"></td>
-            <td th:text="${answer.getQuestion().questionId}"></td>
+            <!-- <td th:text="${answer.getQuestion().questionId}"></td> -->
             <td th:text="${answer.upvotes}"></td>
             <td th:text="${answer.date}"></td>
 
